welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:13: error: not found: value c
	while (c < 10)
               ^golomb:23: error: not found: value compt
		while (T(cv) != compt)
                                ^golomb:25: error: not found: value compt
			compt = compt +1 ; T(cp) = cv; cp = cp + 1;
                        ^